# MLSys-NYU-2023

./: .gitignore  LICENSE  README.md
weeks/01/: README.md  fundamentals.md
weeks/01/demo/: README.md  pyproject.toml
weeks/01/demo/src/demo/: __init__.py
weeks/02/: README.md  homework_1.md  pyproject.toml
weeks/02/notebooks/: scientific_computing.ipynb  slide_plots.ipynb
weeks/03/: README.md  pyproject.toml
weeks/03/notebooks/: feature_engineering_and_model_selection.ipynb  slides.ipynb
weeks/04/: README.md  homework_2.md  pyproject.toml
weeks/04/notebooks/: classification.ipynb  slides.ipynb
weeks/05/: README.md  pyproject.toml
weeks/05/notebooks/: imbalanced_learning.ipynb  slides.ipynb  trees_and_ensembles.ipynb
weeks/06/: README.md  homework_3.md  pyproject.toml
weeks/06/data/: buyers.csv  merchants.csv  payments.csv
weeks/06/notebooks/: slides.ipynb  time_series_ml.ipynb
weeks/07/: README.md  pyproject.toml
weeks/07/notebooks/: deep_learning.ipynb
weeks/08/: README.md  pyproject.toml
weeks/08/notebooks/: metaflow_client_api.ipynb
weeks/09/: README.md  homework_4.md  pyproject.toml
weeks/09/src/: comet_playground.py
weeks/10/: README.md  pyproject.toml
weeks/10/app/: app.py
weeks/10/notebooks/: error_analysis.ipynb
weeks/11/: README.md  homework_5.md  pyproject.toml
weeks/11/notebooks/: Intro_to_Markov_Language_Models.ipynb  Intro_to_Text_Classification.ipynb
weeks/12/: README.md  pyproject.toml
weeks/12/notebooks/: Intro_to_Word_Embeddings.ipynb
weeks/12/project/: flow_utils.py  model.pkl  my_flow.py  vectorizer.pkl
weeks/13/: README.md  homework_6.md  pyproject.toml
weeks/13/src/: my_app.py
weeks/14/: README.md
