[project]
name = "03"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ethan Rosenthal", email = "ethan.rosenthal@nyu.edu" }
]
dependencies = [
    "numpy>=1, <2",
    "pandas>=1, <2",
    "scikit-learn>=1, <2",
    "matplotlib>=3, <4",
    "jupyterlab>=4, <5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
