[project]
name = "week8"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jacopo Tagliabue", email = "jacopo.tagliabue@nyu.edu" }
]
dependencies = [
    "scikit-learn>=1, <2",
    "metaflow==2.10.3",
    "matplotlib==3.4.3",
    "setuptools>=68.2.2",
    "jupyterlab>=4, <5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
