[project]
name = "week13"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jacopo Tagliabue", email = "jacopo.tagliabue@nyu.edu" }
]
dependencies = [
    "scikit-learn>=1, <2",
    "setuptools>=68.2.2",
    "metaflow==2.10.3",
    "Flask==3.0.0"
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
